--- a/src/tmpl/footer.html
+++ b/src/tmpl/footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
 <div class="nav"></div>
-<div class="creator">lil∘btn is created by <a href="http://j.mp/livibetter">Yu-Jie Lin</a></div>
+<div class="creator">lil∘btn is created by <a href="http://lmgtfy.com/?q=livibetter">Yu-Jie Lin</a></div>
 {{ config.after_footer }}
 </div>
