Move Index and js-jquery-jknav doc to wiki

--- a/src/tmpl/header.html
+++ b/src/tmpl/header.html
@@ -5,7 +5,7 @@
 <div id="btn"></div>
 <div class="nav">
 <a href="http://lilbtn.blogspot.com/p/about.html">Abort</a>
-<a href="http://lilbtn.blogspot.com/p/index.html">Btn Index</a>
+<a href="http://code.google.com/p/lilbtn/wiki/BtnIndex">Btn Index</a>
 <a href="http://lilbtn.blogspot.com">Blog &amp; Docs</a>
 <a href="http://groups.google.com/group/lilbtn">Help</a>
 <a href="/donate">Donate</a>
