--- a/src/static/js/jquery/jquery.jknav.demo.html
+++ b/src/static/js/jquery/jquery.jknav.demo.html
@@ -56,6 +56,18 @@ $(function () {
 <p>h, l - move between h2 (easing: easeOutBounce, speed: slow, reevalute: false)</p>
 <p>u, d - move between h2 (easing: easeOutBounce, speed: slow, circular: false, reevalute: false)</p>
 <p>The box on top-right corner is to demonstrate that you could have a programmatic way to control jknav. In this box, user can use clicks to navigate.</p>
+<h2>Form elements for testing</h2>
+<form>
+<div>
+  <input type="text"/>
+  <select><option>option</option></select>
+  <input type="button" value="button1"/>
+  <button>button2</button>
+</div>
+<div>
+  <textarea></textarea>
+</div>
+</form>
 <h2>Header 2:1</h2>
 <h3>Header 3:1</h3>
 Lorem ipsum dolor sit amet, urna magna semper pariatur montes, ligula wisi, ligula ut donec nullam imperdiet, fermentum enim. Imperdiet integer ipsum, laoreet praesent eleifend donec. Sapien vestibulum, dolor laoreet semper non, iaculis in, lobortis dui cras commodo ipsum, venenatis feugiat aliquet. Mollis pede ultricies. Eius imperdiet nulla. Neque ut lorem venenatis sit, alias felis vitae phasellus sed dolor scelerisque, metus neque, lorem quis molestie. Fusce diam feugiat vivamus urna, sed id in sed risus penatibus quis, dictumst nibh fringilla turpis commodo ac massa, adipiscing pede sapien nullam et ut pede, eleifend aliquam ipsum. Ipsum metus iaculis magna, id sed quisque morbi. Sit sociis suspendisse commodo amet in, etiam wisi, consectetuer faucibus turpis ipsum mi, fermentum aenean. Egestas proin at. Euismod proin nec, id vitae in nam libero, tellus ante. Luctus dictum, urna ligula ligula accumsan laoreet lobortis aliquam, ultricies eget donec vitae vivamus.
