--- a/src/static/g/yt/embed.html
+++ b/src/static/g/yt/embed.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <title>Lightweight YouTube Player Loader</title>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='embed.css' rel='stylesheet'/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="embed.js"></script>
